# serializer version: 1
# name: test_climate[climate.bedroom_breezer_4s-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        '1',
        '2',
        '3',
        '4',
        '5',
        '6',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        <SwingMode.SWING_OUTSIDE: 'outside'>,
        <SwingMode.SWING_INSIDE: 'inside'>,
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_breezer_4s',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tion',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': 'tion_breezer',
    'unique_id': 'B4S0000001',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate[climate.bedroom_breezer_4s-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 18,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: '3',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'auto',
        '1',
        '2',
        '3',
        '4',
        '5',
        '6',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Breezer 4S',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      'mode': 'manual',
      'power': 40,
      'speed': 3,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 425>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: <SwingMode.SWING_OUTSIDE: 'outside'>,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        <SwingMode.SWING_OUTSIDE: 'outside'>,
        <SwingMode.SWING_INSIDE: 'inside'>,
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 15,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_breezer_4s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate[climate.breezer_o2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        '1',
        '2',
        '3',
        '4',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        <SwingMode.SWING_OUTSIDE: 'outside'>,
        <SwingMode.SWING_INSIDE: 'inside'>,
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.breezer_o2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tion',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 424>,
    'translation_key': 'tion_breezer',
    'unique_id': 'BO20000001',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate[climate.breezer_o2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 16,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: '1',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        '1',
        '2',
        '3',
        '4',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Breezer O2',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.FAN: 'fan'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      'mode': None,
      'speed': 1,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 424>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: <SwingMode.SWING_INSIDE: 'inside'>,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        <SwingMode.SWING_OUTSIDE: 'outside'>,
        <SwingMode.SWING_INSIDE: 'inside'>,
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'context': <ANY>,
    'entity_id': 'climate.breezer_o2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'fan_only',
  })
# ---
# name: test_climate[climate.living_room_breezer_3s-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        '1',
        '2',
        '3',
        '4',
        '5',
        '6',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        <SwingMode.SWING_OUTSIDE: 'outside'>,
        <SwingMode.SWING_INSIDE: 'inside'>,
        <SwingMode.SWING_MIXED: 'mixed'>,
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room_breezer_3s',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tion',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': 'tion_breezer',
    'unique_id': 'B3S0000001',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate[climate.living_room_breezer_3s-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        '1',
        '2',
        '3',
        '4',
        '5',
        '6',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Breezer 3S',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.OFF: 'off'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0,
      'mode': None,
      'speed': 0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 425>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: <SwingMode.SWING_MIXED: 'mixed'>,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        <SwingMode.SWING_OUTSIDE: 'outside'>,
        <SwingMode.SWING_INSIDE: 'inside'>,
        <SwingMode.SWING_MIXED: 'mixed'>,
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 18,
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room_breezer_3s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
